@@ -1,3 +1,4 @@
+- added /forget
 - zsh-style underscore equivalence in setting names
 - "Now connected to" en "Connection lost" worden nu gebufferd en gelogd.
 - autoreconnect setten vanuit user heeft nu onmiddelijk effect
